POJO with application.properties simple version

--- a/fundamentos/src/main/resources/application.properties
+++ b/fundamentos/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.servlet.context-path = /app
 value.name=jose
 value.lastname=lobato
 value.random=${random.value}
+
+user.email = test@email.com
+user.password = 1234
+user.age = 25
